@@ -11,7 +11,7 @@ install:
   - cpanm --quiet --notest DBM::Deep
   - cpanm --quiet --notest Digest::MD5
   - cpanm --quiet --notest File::Find::Rule
-  - cpanm --quiet --notest Spreadsheet::ParseExcel
+  - cpanm --quiet --notest Spreadsheet::XLSX
   - cpanm --quiet --notest Text::CSV_XS
   - cpanm --quiet --notest LWP::Protocol::https
   - cpanm --quiet --installdeps --with-develop --notest .
