@@ -1,0 +1,2 @@
+export TREE_IGNORE="$TREE_IGNORE:libphonenumber"
+export PERL5LIB="lib:$PERL5LIB"
