@@ -1,4 +1,6 @@
-.envrc
+.DS_Store
+.ofcom-datetime
+.libphonenumber-tag
 MYMETA.json
 MYMETA.yml
 Makefile
@@ -12,20 +14,20 @@ pm_to_blib
 .gitignore
 codelist.zip
 sabc.txt
-sabcde11_12.xls
-sabcde13.xls
-sabcde14.xls
-sabcde15.xls
-sabcde16.xls
-sabcde17.xls
-sabcde18.xls
-sabcde19.xls
-sabcde2.xls
-S3.xls
-S5.xls
-S7.xls
-S8.xls
-S9.xls
+sabcde11_12.xlsx
+sabcde13.xlsx
+sabcde14.xlsx
+sabcde15.xlsx
+sabcde16.xlsx
+sabcde17.xlsx
+sabcde18.xlsx
+sabcde19.xlsx
+sabcde2.xlsx
+S3.xlsx
+S5.xlsx
+S7.xlsx
+S8.xlsx
+S9.xlsx
 t/example-phone-numbers.t
 COCodeStatus_ALL.csv
 COCodeStatus_ALL.zip
