@@ -1,7 +1,9 @@
 .DS_Store
 ^libphonenumber
 ^\.git
-^\.envrc
+.envrc
+.ofcom-datetime
+.libphonenumber-tag
 ^build-
 S3.xls
 S5.xls
