@@ -3,18 +3,61 @@
 # THIS SHELL SCRIPT IS NOT INTENDED FOR END USERS OR FOR PEOPLE INSTALLING
 # THE MODULES, BUT FOR THE AUTHOR'S USE WHEN UPDATING THE DATA FROM OFCOM'S
 # AND libphonenumber's PUBLISHED DATA.
+#
+# args:
+#   --force       force a complete rebuild
+#   --tag $tag    build using a particular libphonenumber git tag
+#                   implies --force
+#                   use latest in their repo if not specified
+#   --previoustag build using whatever --tag was used last time
+#
+# Generally you will develop using --force and/or --tag, but then
+# when a dist is built it will be freshened with --previoustag to
+# make sure you get what you expect, even if the libphonenumber gang
+# have created a new tag just before you build the dist
 
+TAG=unset
+FORCE=0
+EXITSTATUS=0
 
-if [ "$1" == "--force" ]; then
-  rm share/Number-Phone-UK-Data.db
-  rm share/Number-Phone-NANP-Data.db
-  rm lib/Number/Phone/NANP/Data.pm
-  rm lib/Number/Phone/Country/Data.pm
-  rm lib/Number/Phone/StubCountry/KZ.pm
-  rm t/example-phone-numbers.t
+# now get an up-to-date libphonenumber
+(
+    (cd libphonenumber || (echo Checking out libphonenumber ...; git clone https://github.com/googlei18n/libphonenumber.git))
+    cd libphonenumber
+    git checkout -q master
+    git pull -q
+)
+
+while [ "$#" != "0" ] ; do
+    if [ "$1" == "--tag" ]; then
+        shift
+        TAG=$1
+        FORCE=1
+    elif [ "$1" == "--previoustag" ]; then
+        TAG=$(cat .libphonenumber-tag)
+    elif [ "$1" == "--force" ]; then
+        FORCE=1
+    fi
+
+    shift
+done
+
+if [ "$TAG" == "unset" ]; then
+    TAG=$(cd libphonenumber; git tag --sort=creatordate|tail -1)
 fi
 
-EXITSTATUS=0
+if [ "$FORCE" == "1" ]; then
+    rm share/Number-Phone-UK-Data.db
+    rm share/Number-Phone-NANP-Data.db
+    rm lib/Number/Phone/NANP/Data.pm
+    rm lib/Number/Phone/Country/Data.pm
+    rm lib/Number/Phone/StubCountry/KZ.pm
+    rm t/example-phone-numbers.t
+fi
+
+# switch to our desired tag, and cache it
+(cd libphonenumber; git checkout -q $TAG)
+echo $TAG > .libphonenumber-tag
 
 # first get OFCOM data and NANP operator data
 # NANP data was found at:
@@ -23,21 +66,21 @@ EXITSTATUS=0
 #     http://cnac.ca/co_codes/co_code_status.htm
 for i in \
     http://static.ofcom.org.uk/static/numbering/sabc.txt                        \
-    http://static.ofcom.org.uk/static/numbering/sabcde11_12.xls                 \
-    http://static.ofcom.org.uk/static/numbering/sabcde13.xls                    \
-    http://static.ofcom.org.uk/static/numbering/sabcde14.xls                    \
-    http://static.ofcom.org.uk/static/numbering/sabcde15.xls                    \
-    http://static.ofcom.org.uk/static/numbering/sabcde16.xls                    \
-    http://static.ofcom.org.uk/static/numbering/sabcde17.xls                    \
-    http://static.ofcom.org.uk/static/numbering/sabcde18.xls                    \
-    http://static.ofcom.org.uk/static/numbering/sabcde19.xls                    \
-    http://static.ofcom.org.uk/static/numbering/sabcde2.xls                     \
-    http://static.ofcom.org.uk/static/numbering/S3.xls                          \
-    http://static.ofcom.org.uk/static/numbering/S5.xls                          \
-    http://static.ofcom.org.uk/static/numbering/S7.xls                          \
-    http://static.ofcom.org.uk/static/numbering/S8.xls                          \
-    http://static.ofcom.org.uk/static/numbering/S9.xls                          \
-    https://www.nationalpooling.com/reports/region/AllBlocksAugmentedReport.zip \
+    http://static.ofcom.org.uk/static/numbering/sabcde11_12.xlsx                 \
+    http://static.ofcom.org.uk/static/numbering/sabcde13.xlsx                    \
+    http://static.ofcom.org.uk/static/numbering/sabcde14.xlsx                    \
+    http://static.ofcom.org.uk/static/numbering/sabcde15.xlsx                    \
+    http://static.ofcom.org.uk/static/numbering/sabcde16.xlsx                    \
+    http://static.ofcom.org.uk/static/numbering/sabcde17.xlsx                    \
+    http://static.ofcom.org.uk/static/numbering/sabcde18.xlsx                    \
+    http://static.ofcom.org.uk/static/numbering/sabcde19.xlsx                    \
+    http://static.ofcom.org.uk/static/numbering/sabcde2.xlsx                     \
+    http://static.ofcom.org.uk/static/numbering/S3.xlsx                          \
+    http://static.ofcom.org.uk/static/numbering/S5.xlsx                          \
+    http://static.ofcom.org.uk/static/numbering/S7.xlsx                          \
+    http://static.ofcom.org.uk/static/numbering/S8.xlsx                          \
+    http://static.ofcom.org.uk/static/numbering/S9.xlsx                          \
+    https://www.nationalpooling.com/reports/region/AllBlocksAugmentedReport.zip  \
     http://www.cnac.ca/data/COCodeStatus_ALL.zip;
 do
     # make sure that there's a file that curl -z can look at
@@ -57,23 +100,27 @@ rm COCodeStatus_ALL.csv AllBlocksAugmentedReport.txt
 unzip -q COCodeStatus_ALL.zip
 unzip -q AllBlocksAugmentedReport.zip
 
+# stash the date/time on which we retrieved OFCOM data
+#   is this invocation of stat a Mac (well, BSD)-ism?
+stat -f %Sm $(ls -rt sabc.txt *.xlsx|tail -1) > .ofcom-datetime
+
 # if share/Number-Phone-UK-Data.db doesn't exist, or OFCOM's stuff is newer ...
 if test ! -e share/Number-Phone-UK-Data.db -o \
   sabc.txt          -nt share/Number-Phone-UK-Data.db -o \
-  sabcde11_12.xls   -nt share/Number-Phone-UK-Data.db -o \
-  sabcde13.xls      -nt share/Number-Phone-UK-Data.db -o \
-  sabcde14.xls      -nt share/Number-Phone-UK-Data.db -o \
-  sabcde15.xls      -nt share/Number-Phone-UK-Data.db -o \
-  sabcde16.xls      -nt share/Number-Phone-UK-Data.db -o \
-  sabcde17.xls      -nt share/Number-Phone-UK-Data.db -o \
-  sabcde18.xls      -nt share/Number-Phone-UK-Data.db -o \
-  sabcde19.xls      -nt share/Number-Phone-UK-Data.db -o \
-  sabcde2.xls       -nt share/Number-Phone-UK-Data.db -o \
-  S3.xls            -nt share/Number-Phone-UK-Data.db -o \
-  S5.xls            -nt share/Number-Phone-UK-Data.db -o \
-  S7.xls            -nt share/Number-Phone-UK-Data.db -o \
-  S8.xls            -nt share/Number-Phone-UK-Data.db -o \
-  S9.xls            -nt share/Number-Phone-UK-Data.db -o \
+  sabcde11_12.xlsx   -nt share/Number-Phone-UK-Data.db -o \
+  sabcde13.xlsx      -nt share/Number-Phone-UK-Data.db -o \
+  sabcde14.xlsx      -nt share/Number-Phone-UK-Data.db -o \
+  sabcde15.xlsx      -nt share/Number-Phone-UK-Data.db -o \
+  sabcde16.xlsx      -nt share/Number-Phone-UK-Data.db -o \
+  sabcde17.xlsx      -nt share/Number-Phone-UK-Data.db -o \
+  sabcde18.xlsx      -nt share/Number-Phone-UK-Data.db -o \
+  sabcde19.xlsx      -nt share/Number-Phone-UK-Data.db -o \
+  sabcde2.xlsx       -nt share/Number-Phone-UK-Data.db -o \
+  S3.xlsx            -nt share/Number-Phone-UK-Data.db -o \
+  S5.xlsx            -nt share/Number-Phone-UK-Data.db -o \
+  S7.xlsx            -nt share/Number-Phone-UK-Data.db -o \
+  S8.xlsx            -nt share/Number-Phone-UK-Data.db -o \
+  S9.xlsx            -nt share/Number-Phone-UK-Data.db -o \
   build-data.uk     -nt share/Number-Phone-UK-Data.db;
 then
   if [ "$TRAVIS" != "true" ] && [ "$CIRRUS_CI" != "true" ] && [ "$APPVEYOR" != "True" ]; then
@@ -84,9 +131,6 @@ then
 else
   echo share/Number-Phone-UK-Data.db is up-to-date
 fi
-
-# now get an up-to-date libphonenumber
-(cd libphonenumber && git pull -q) || (echo Checking out libphonenumber ...; git clone https://github.com/googlei18n/libphonenumber.git)
 
 # lib/Number/Phone/Country/Data.pm doesn't exist, or if libphonenumber/resources/PhoneNumberMetadata.xml is newer ...
 if test ! -e lib/Number/Phone/Country/Data.pm -o \
