@@ -25,9 +25,9 @@ my $data = {
   },
   IM => {
     mobile      => ['+44 7624 000000', '+44 7457 600000'],
-    geographic  => '+44 1624 500000',
+    geographic  => '+44 1624 710000',
     specialrate => '+44 8456247890',
-    operator    => qr/^(Manx Telecom Trading Limited|Sure \(Isle of Man\) Limited)$/,
+    operator    => qr/^(MANX TELECOM TRADING LIMITED|Sure \(Isle of Man\) Ltd)$/,
     regulator   => 'Isle of Man Communications Commission, http://www.gov.im/government/boards/telecommunications.xml'
   },
 };
@@ -39,21 +39,23 @@ foreach my $cc (keys %{$data}) {
 
       my $method = "is_$type";
       foreach my $number (ref($data->{$type}) ? @{$data->{$type}} : $data->{$type}) {
-          my $object = Number::Phone->new($number);
-          isa_ok($object, "Number::Phone::UK::$cc", "isa N::P::UK::$cc");
-          isa_ok($object, 'Number::Phone::UK', "isa N::P::UK by inheritance");
-          is($object->country(), $cc, "country() method works");
-          ok($object->$method(), $number." detected as being $type");
-          is($object->format(), $number, "format() method works");
-          is_deeply(
-              [sort $object->type()],
-              [sort ($method, qw(is_allocated is_valid))],
-              "type() works"
-          );
-          ref($data->{operator})
-              ? like($object->operator(), $data->{operator}, "inherited operator() works")
-              :   is($object->operator(), $data->{operator}, "inherited operator() works");
-          is($object->regulator(), $data->{regulator}, "regulator() works");
+          subtest $number => sub {
+              my $object = Number::Phone->new($number);
+              isa_ok($object, "Number::Phone::UK::$cc", "isa N::P::UK::$cc");
+              isa_ok($object, 'Number::Phone::UK', "isa N::P::UK by inheritance");
+              is($object->country(), $cc, "country() method works");
+              ok($object->$method(), $number." detected as being $type");
+              is($object->format(), $number, "format() method works");
+              is_deeply(
+                  [sort $object->type()],
+                  [sort ($method, qw(is_allocated is_valid))],
+                  "type() works"
+              );
+              ref($data->{operator})
+                  ? like($object->operator(), $data->{operator}, "inherited operator() works")
+                  :   is($object->operator(), $data->{operator}, "inherited operator() works");
+              is($object->regulator(), $data->{regulator}, "regulator() works");
+          };
       }
   }
 }
