@@ -1,4 +1,6 @@
 XXXX-XX-XX      XXXXXX  Windows doesn't properly support fork() so skip the tests for it;
+                        Use data from a tagged release of libphonenumber instead of whatever
+                          is in master, so builds are more reproducible;
                         Data updates
 
 2020-09-04      3.6006  Data updates
